<resources>
    <string name="app_name">MCloudProjects</string>
    <string name="history_id_username">发布者名称</string>
    <string name="history_id_time">今天 20:00</string>
    <string name="history_id_content">欢迎使用陌云APP，这是我的第一条动态，我很喜欢与大家同处一片云彩下，大家一起来使用陌云App，分享快乐与悲伤吧。</string>
    <string name="history_id_comment_hint">说点什么...</string>
    <string name="history_id_comment_btn">评论</string>
    <string name="app_footer_cloudsea">云海</string>
    <string name="app_footer_cloudrun">云迹</string>
    <string name="app_footer_cloudhome">云乡</string>
    <string name="cloudsliding_username">陌云</string>
    <string name="cloudsliding_people_type_album">相册</string>
    <string name="cloudsliding_people_type_follower">关注</string>
    <string name="cloudsliding_people_type_fans">粉丝</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="disload">下拉加载</string>
    <string name="item_null">没有更多了。</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="release_title">发说说</string>
    <string name="release_hint">正在发生什么...</string>
    <string name="release_loc_text">显示位置</string>
    <string name="release_location_text">搜索</string>
    <string name="release_at_text">提醒谁看</string>
    <string name="release_btn_text">推云</string>
    <string name="pop_chat">查找</string>
    <string name="pop_sangzhao">创建/搜索云社</string>
    <string name="pop_camera">设置</string>
    <string name="pop_scan">扫一扫</string>
    <string name="app_exit">再按一次退出程序</string>
    <drawable name="clr_normal">#01ACED</drawable>
    <drawable name="clr_pressed">#29BDF5</drawable>
    <drawable name="rel_normal">#ffffff</drawable>
    <drawable name="rel_pressed">#E4E6E7</drawable>
</resources>
